<resources>
    <string name="app_name">Inventario UH</string>
    <string name="title_activity_import">importActivity</string>

    <string name="inventory">Inventario UH</string>
    <string name="import_inventory">Importar Inventario</string>
    <string name="insert_new_number">Insertar número nuevo</string>
    <string name="configuration">Configuración</string>
    <string name="search">Buscar</string>
    <string name="search_by_qr">Leer qr</string>

    <string name="error1">"Error fatal: No se puede encontrar la ruta de almacenamiento externa del dispositivo "</string>
    <string name="error2">Error fatal: No se pudo crear la carpeta de datos de la aplicación</string>
    <string name="error3">Error fatal: No se pudo leer el archivo</string>
    <string name="error4">Error fatal: El archivo no es compatible!!!</string>
    <string name="error5">Error fatal: El archivo esta corrupto o fue modificado!</string>
    <string name="error6">Error fatal: El contenido del archivo no es seguro y no es reconocido por la aplicación! Asegurese de que proviene de una fuente confiable!</string>
    <string name="error7">"Error Fatal: Huvo un problema con el acceso o creación de las carpetas de la aplicación! "</string>
    <string name="error8">Error fatal leyendo la base de datos!</string>
    <string name="error9">Error fatal: Por algún motivo el sistema imforma que ese archivo no existe! </string>

    <string name="text1">"carpeta de datos creada en "</string>
    <string name="text2">"Los archivos a importar deben ser copiados en la carpeta \"Para Importar\" ubicada en: "</string>
    <string name="text3">"Tiene dos opciones, cerrar la aplicación y volverlo a copiar o reiniciar la importación desde el principio con otro archivo. El archivo era: "</string>
    <string name="text4">Primero seleccione un archivo para importar!!!</string>
    <string name="text5">"Copie los archivos a importar en la carpeta "</string>
    <string name="text6">Ya hay una importatción en curso!!!</string>
    <string name="text7">Ya hay una importación en curso, ¿Desa cancelarla?</string>
    <string name="text8">La aplicación está en proceso de importación! Debe terminar la misma antes de continuar!</string>
    <string name="text9">La última importación fue cancelada y la base de datos está corrupta, debe importar antes de continuar!</string>
    <string name="text10">El proceso de imporación a terminado satisfactoriamente!</string>
    <string name="text11">Proceso Terminado</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="text12">Vuelvala a iniciar y si persiste el problema reintálela! Si aún así aparece este error busque ayuda!</string>
    <string name="text13">El proceso de imporatción se ha cancelado!</string>
    <string name="title_activity_detail_acivity">DetailAcivity</string>
    <string name="text14">Este valor no es editable por estar el número en un área en seguimiento!</string>
    <string name="text15">El estado Sobrante solo se puede modificar al importar o leer un QR!</string>
    <string name="text16">Localización actualizada!</string>
    <string name="text17">Observación actualizada!</string>
    <string name="text18">Estado actualizado!</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="text19">No ha seleccionado nigún área</string>
    <string name="text20">Cambios Guardados!</string>
    <string name="text21">Este tipo se le adjudicará a todos los números de la misma descripción</string>
    <string name="text22">"Áreas en seguimiento: "</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_by_qr">SearchByQRActivity</string>
    <string name="title_activity_new_number">NewNumberActivity</string>
    <string name="title_activity_qrfactory">QRFActoryActivity</string>
    <string name="title_activity_printable_qrs_factory">PrintableQRsFactoryActivity</string>
    <string name="title_activity_export_inventory">ExportInventoryActivity</string>
    <string name="title_activity_report_acivity">ReportAcivity</string>
    <string name="qr_viewer">Visualizador de QRs</string>
    <string name="help">Ayuda</string>
    <string name="make_qr">Elavorar QRs de la selección</string>
    <string name="make_backup">Hacer respaldo de la selección</string>
    <string name="make_report">Hacer reporte de la selección</string>
    <string name="title_activity_counter">CounterActivity</string>
    <string name="title_activity_type_filler">TypeFiller</string>
    <string name="type_filler">Llenar tipos</string>
    <string name="title_activity_inventory_configuration">InventoryConfigurationActivity</string>

</resources>
