<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MainActivity">

    <item
        android:id="@+id/see_inventory"
        android:orderInCategory="100"
        android:title="@string/inventory"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_inventory"
        android:orderInCategory="100"
        android:title="@string/import_inventory"
        app:showAsAction="never" />

    <item
        android:id="@+id/insert_new_number"
        android:orderInCategory="100"
        android:title="@string/insert_new_number"
        app:showAsAction="never" />

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="never" />

    <item
        android:id="@+id/search_by_qr"
        android:orderInCategory="100"
        android:title="@string/search_by_qr"
        app:showAsAction="never" />

    <item
        android:id="@+id/configuration"
        android:orderInCategory="100"
        android:title="@string/configuration"
        app:showAsAction="never" />



</menu>
