<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.SearchActivity"
    >

    <item
        android:id="@+id/report"
        android:orderInCategory="100"
        android:title="@string/make_report"
        app:showAsAction="never" />

    <item
        android:id="@+id/export"
        android:orderInCategory="100"
        android:title="@string/make_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/qr_factory"
        android:orderInCategory="100"
        android:title="@string/make_qr"
        app:showAsAction="never" />

    <item
        android:id="@+id/search_by_qr"
        android:orderInCategory="100"
        android:title="@string/search_by_qr"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />





</menu>
